--- a/index.html
+++ b/index.html
@@ -120,7 +120,28 @@
               <!-- End Student -->
 
               <!-- Duplicate li code block above to place more students here -->
+              <li class="home-blog-post">
+                <div class="blog-thumb">
+                  <a href="students/student_name.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  </a>
+                </div>
 
+                <div class="blog-title">
+                  <div class="big-comment">
+                    <h3>
+                      <a href="students/student_name.html">Suzy Cho</a>
+                    </h3>
+                  </div>
+                  <p class="home-blog-post-meta">Tag Line</p>
+                </div>
+                <div class="clear"></div>
+
+                <div class="excerpt">
+                  <p>I grew up in NY and trained as a classical pianist from a young age but didn't pursue a career with piano. Instead I worked in advertising and fashion industries before finding coding. I enjoy traveling and still in pursuit of new hobbies.</p>
+                </div>
+                <div class="clear"></div>
+              </li>
             </ul>
           </div>
         </div>
