--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Eugene DiBenedetto</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">What do you call a fake noodle? An impasta.</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>From Brooklyn, NY originally, no accent though (sorry). Studied Sociology at Santa Clara University in Cali before moving back to Brooklyn after graduating. Worked as a substitute teacher for 5 years at Brooklyn Tech, where I still help coach the varsity football and basketball teams.</p>
                 </div>
                 <div class="clear"></div>
               </li>
