--- a/index.html
+++ b/index.html
@@ -120,7 +120,28 @@
               <!-- End Student -->
 
               <!-- Duplicate li code block above to place more students here -->
+              <li class="home-blog-post">
+                <div class="blog-thumb">
+                  <a href="students/student_name.html">
+                    <img width="304" height="304" class="prof-image" src="/Users/Eugene/deploy-on-day-1-web-080717/img/students/image1.JPG" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  </a>
+                </div>
 
+                <div class="blog-title">
+                  <div class="big-comment">
+                    <h3>
+                      <a href="students/student_name.html">Kevin Yonzon</a>
+                    </h3>
+                  </div>
+                  <p class="home-blog-post-meta">Oh how the turn tables.</p>
+                </div>
+                <div class="clear"></div>
+
+                <div class="excerpt">
+                  <p>Born and raised in Southern California, grew up in the suburbs of Los Angeles (Monrovia, CA to be exact). Got my Bachelors degree in Business Economics at University of California, Irvine. Enjoy playing video and board games. Love going out and trying new food places. Made going to the gym regularly a habit of mine to accomodate for the prior.</p>
+                </div>
+                <div class="clear"></div>
+              </li>
             </ul>
           </div>
         </div>
