--- a/index.html
+++ b/index.html
@@ -120,6 +120,30 @@
               <!-- End Student -->
 
               <!-- Duplicate li code block above to place more students here -->
+              <li class="home-blog-post">
+                <div class="blog-thumb">
+                  <a href="students/student_name.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/jil_K.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  </a>
+                </div>
+
+                <div class="blog-title">
+                  <div class="big-comment">
+                    <h3>
+                      <a href="students/student_name.html">Jil Krusemann</a>
+                    </h3>
+                  </div>
+                  <p class="home-blog-post-meta"></p>
+                </div>
+                <div class="clear"></div>
+
+                <div class="excerpt">
+                  <p>Moved around a bunch while growing up - Singapore, Bangkok and Shanghai - before moving to Boston for college. At Boston University, I studied International Relations, and since then, I've been working in the public relations industry. Love traveling (naturally!), words, and staying fit so I can continue to indulge my chocolate habit. </p>
+                </div>
+                <div class="clear"></div>
+              </li>
+
+
 
             </ul>
           </div>
