--- a/students/student_name.html
+++ b/students/student_name.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href="../css/style.css" type='text/css' media='all' />
   <style>
     .top-page-title {
-      background: url(../img/students/student_name_background.jpg) no-repeat top center;
+      background: url(../img/students/beach.jpg) no-repeat top center;
     }
   </style>
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
@@ -74,7 +74,7 @@
       </div>
 
       <div class="link-subs">
-        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Student Name</span>
+        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Jil Krusemann</span>
         <ul class="smooth-scroller">
           <li><a href="#scroll-about">About</a></li>
           <li>|</li>
@@ -85,27 +85,25 @@
           <li><a href="#scroll-favorites">Favorites</a></li>
         </ul>
       </div>
-    </div>
+        </div>
     <!-- End Header -->
-
     <!-- Begin Content -->
     <div class="container">
 
       <!-- Begin Splash Image -->
       <div class="top-page-title">
         <div>
-          <img src="../img/students/student_name_profile.jpg" class="student_pic">
+          <img src="../img/students/Jil_K.jpg" class="student_pic">
         </div>
       </div>
       <! -- End Splash Image -->
 
       <!-- Begin Title Content -->
       <div class="page-title">
-        <h4 class="ib_main_header">Student Name</h4>
+        <h4 class="ib_main_header">Jil Krusemann</h4>
         <div class="social-icons">
-          <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
-          <a href="http://www.linkedin.com/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
-          <a href="https://github.com/"><i class="icon-github ib-social-icons"></i></a>
+          <a href="http://www.linkedin.com/in/jilkrusemann/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
+          <a href="https://github.com/jilli26"><i class="icon-github ib-social-icons"></i></a>
           <a href="#"><i class="icon-rss ib-social-icons"></i></a>
         </div>
 
@@ -114,7 +112,8 @@
             <ul class="testimonials slides">
               <li id="text-7" class="widget_text" style="list-style: none; display: list-item;">
                 <div class="textwidget">
-                  <h3>"Quote It was the best of times it was meh." -- someone smart said this.</h3>
+                  <h3>"It's no use going back to yesterday, because I was a different person then."</h3>
+                  <h3>-Lewis Carroll, Alice in Wonderland</h3>
                 </div>
               </li>
             </ul>
@@ -138,7 +137,7 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut. 
+                  Moved around a bunch while growing up - Singapore, Bangkok and Shanghai - before moving to Boston for college. At Boston University, I studied International Relations, and since then, I've been working in the public relations industry. Love traveling (naturally!), words, and staying fit so I can continue to indulge my chocolate habit.
                 </p>
               </div>
             </div>
@@ -148,8 +147,8 @@
                 <div class="services-title"><h3>Education</h3></div>
                 <div class="clear"></div>
                 <ul>
-                  <li>University</li>
-                  <li>Other School</li>
+                  <li>Boston University</li>
+                  <li>Shanghai American School</li>
                 </ul>
               </div>
             </div>
@@ -158,9 +157,9 @@
               <div class="services">
                 <div class="services-title"><h3>Work</h3></div>
                 <div class="clear"></div>
-                <h4>Some Company</h4>
+                <h4></h4>
                 <p>
-                  Blurb about company...
+
                 </p>
               </div>
             </div>
@@ -211,10 +210,8 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      - <a href="http://www.codeschool.com/">Code School</a><br>
-                      - <a href="http://teamtreehouse.com/">Treehouse</a><br>
-                      - <a href="http://www.codecademy.com/">Codecademy</a><br>
-                      - <a href="https://coderwall.com/">Coder Wall</a><br>
+                      - <a href="http://www.codeschool.com/">Codecademy</a><br>
+                      - <a href="https://www.khanacademy.org/">Khan Academy</a><br>
                     </p>
                   </div>
                 </div>
@@ -226,8 +223,7 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      - <a href="#">Personal Blog</a><br>
-                      - <a href="#">Tumblr</a><br>
+
                     </p>
                   </div>
                 </div>
@@ -259,10 +255,10 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      <a>Buenos Aires</a><br>
-                      <a>Barcelona</a><br>
-                      <a>Minneapolis</a><br>
                       <a>New York</a><br>
+                      <a>Singapore</a><br>
+                      <a>Shanghai</a><br>
+                      <a>Bangkok</a><br>
                     </p>
                   </div>
                 </div>
@@ -273,9 +269,9 @@
                   </div>
                   <div class="clear"></div>
                   <p>
-                    - Favorite Website: <a href="#">Site 1</a><br>
-                    - Favorite Comic: <a href="#">Site 2</a><br>
-                    - Favorite Radio Program: <a href="#">Site 3</a><br>
+                    - Favorite Food: <a href="#">Chocolate</a><br>
+                    - Favorite Color: <a href="#">Turquoise</a><br>
+                    - Favorite TV Show: <a href="#">Friends</a><br>
                   </p>
                 </div>
               </div>
@@ -350,7 +346,7 @@
     </div>
   </div>
   <!-- End Footer -->
-  
+
   <script type='text/javascript' src="../js/jquery.js"></script>
   <script type='text/javascript' src="../js/smooth-scroll.js"></script>
   <script type="text/javascript">
