fixing photos and bugs1

--- a/students/eugene_dibenedetto.html
+++ b/students/eugene_dibenedetto.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href="../css/style.css" type='text/css' media='all' />
   <style>
     .top-page-title {
-      background: url(/Users/kyonzon/Desktop/my_labs/deploy-on-day-1-web-080717/img/students/eugene.background.jpg) no-repeat top center;
+      background: url(../img/students/eugene.background2.jpg) no-repeat top center;
       background-size: cover;
     }
   </style>
@@ -95,7 +95,7 @@
       <!-- Begin Splash Image -->
       <div class="top-page-title">
         <div>
-          <img src="/Users/kyonzon/Desktop/my_labs/deploy-on-day-1-web-080717/img/students/Eugene.headshot.jpg" class="student_pic">
+          <img src="../img/students/eugene-index-pic.png" class="student_pic">
         </div>
       </div>
       <! -- End Splash Image -->
