--- a/students/kevin-yonzon.html
+++ b/students/kevin-yonzon.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href="../css/style.css" type='text/css' media='all' />
   <style>
     .top-page-title {
-      background: url(/Users/Eugene/deploy-on-day-1-web-080717/img/students/image2.JPG) no-repeat top center;
+      background: url(../img/students/image2.JPG) no-repeat top center;
       background-size: cover;
     }
   </style>
@@ -95,7 +95,7 @@
       <!-- Begin Splash Image -->
       <div class="top-page-title">
         <div>
-          <img src="/Users/Eugene/deploy-on-day-1-web-080717/img/students/image3.JPG" class="student_pic">
+          <img src="../img/students/image3.JPG" class="student_pic">
         </div>
       </div>
       <! -- End Splash Image -->
