--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <!-- Begin Student -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
+                  <a href="students/eugene_dibenedetto.html">
                     <img width="304" height="304" class="prof-image" src="img/students/eugene-index-pic.png" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
@@ -105,7 +105,7 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Eugene DiBenedetto</a>
+                      <a href="students/eugene_dibenedetto.html">Eugene DiBenedetto</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">What do you call a fake noodle? An impasta.</p>
@@ -122,7 +122,7 @@
               <!-- Duplicate li code block above to place more students here -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
+                  <a href="students/kevin-yonzon.html">
 
                     <img width="304" height="304" class="prof-image" src="img/students/image1.JPG" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
@@ -131,7 +131,7 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Kevin Yonzon</a>
+                      <a href="students/kevin-yonzon.html">Kevin Yonzon</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">Oh how the turn tables.</p>
@@ -150,7 +150,7 @@
 
                 <li class="home-blog-post">
                   <div class="blog-thumb">
-                    <a href="students/student_name.html">
+                    <a href="students/suzy_cho.html">
                     <img width="304" height="304" class="prof-image" src="img/students/suzy_cho_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
@@ -158,7 +158,7 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Suzy Cho</a>
+                      <a href="students/suzy_cho.html">Suzy Cho</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta"></p>
